WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165775
Infinite recursion when viewport is set to the size of the content but the content overflows the viewport.
https://bugs.webkit.org/show_bug.cgi?id=165775
Summary
Infinite recursion when viewport is set to the size of the content but the co...
alan
Reported
2016-12-12 14:34:52 PST
We should handle such cases like we do with m_setNeedsLayoutWasDeferred.
Attachments
Patch
(2.54 KB, patch)
2016-12-12 15:27 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(2.56 KB, patch)
2016-12-12 15:57 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2016-12-12 14:35:10 PST
rdar://problem/29366628
alan
Comment 2
2016-12-12 15:27:05 PST
Created
attachment 296957
[details]
Patch
Simon Fraser (smfr)
Comment 3
2016-12-12 15:48:59 PST
Comment on
attachment 296957
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=296957&action=review
> Source/WebCore/page/FrameView.cpp:2662 > + // FIXME: Merge this logic with m_setNeedsLayoutWasDeferred and find a more appropriate
File a bug for this.
alan
Comment 4
2016-12-12 15:57:51 PST
Created
attachment 296962
[details]
Patch
WebKit Commit Bot
Comment 5
2016-12-12 16:36:02 PST
Comment on
attachment 296962
[details]
Patch Clearing flags on attachment: 296962 Committed
r209745
: <
http://trac.webkit.org/changeset/209745
>
WebKit Commit Bot
Comment 6
2016-12-12 16:36:06 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug